--- a/web/index.html
+++ b/web/index.html
@@ -23,11 +23,11 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="degilib">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Degilib">
+  <link rel="apple-touch-icon" href="icons/android-chrome-192x192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="icons/favicon.ico"/>
 
   <title>Degilib</title>
   <link rel="manifest" href="manifest.json">
